# TP-CG

./: README.md  demo.txt
TP1/: Makefile  README.md  demo.txt
TP1/src/: Fragment.java  GraphicsWrapper.java  Lighting.java  PainterShader.java  Rasterizer.java  Renderer.java  Scene.java  SimpleShader.java  Texture.java  TextureShader.java
TP1/src/algebra/: SizeMismatchException.java  Vector3.java
TP1/test/functional/: TestAlgebra.java  TestGraphicWrapper.java
TP1/test/unit/algebra/: TestMatrix.java  TestVector.java
TP2/: CMakeLists.txt  helloteapot2.cpp  navigator.cpp  report.md
TP3/: CMakeLists.txt  robot.cpp
TP4/: lumiere.cpp  lumiere.hpp
TP5/: CMakeLists.txt  README.md
TP5/data/models/: README.md
TP5/src/: MeshModel.cpp  MeshModel.hpp  core.cpp  core.hpp  geometry.cpp  loop.cpp  main.cpp  objReader.cpp  rendering.cpp  rendering.hpp
TP5/src/tests/: test_core.cpp  test_geometry.cpp  test_objReader.cpp
TP6/: CMakeLists.txt  README.md  lumiere.cpp
src/: DepthBuffer.java  Fragment.java  Lighting.java  Mesh.java  PerspectiveCorrectRasterizer.java  Rasterizer.java  Renderer.java  Shader.java  Texture.java  TextureShader.java  Transformation.java
src/algebra/: Matrix.java  Vector.java
test/functional/: TestMesh.java  TestRasterizer.java  TestScene.java
test/unit/algebra/: TestVector3.java
